<resources>
    <string name="app_name">Voizy</string>
    <string name="action_settings">Settings</string>

    <string name="rec_start_failed">Failed to start recording</string>
    <string name="rec_close_failed">Failed to finalize recording</string>
    <string name="save">Save</string>
    <string name="finish">Finish</string>
    <string name="name_your_voizy">Name your Voizy</string>
    <string name="voizy_deleted">Deleted %s</string>
    <string name="voizy_sharing">Sharing %s</string>
    <string name="undo">Undo</string>
    <string name="voizy_created_share">Voizy created! Let others enjoy it as well!</string>
    <string name="share">Share</string>
    <string name="voizy_save_failed">"Saving Voizy failed, make sure you input name."</string>
    <string name="voizy_saving">"Saving Voizy"</string>
    <string name="audio_file_found">"Audio file not found"</string>
    <string name="share_voizy">"Share Voizy"</string>
    <string name="enter_tags_hint">"Enter tags"</string>
    <string name="press_back_again_discard_voizy">"Press back again to discard Voizy"</string>
    <string name="audio_file_not_found">"Audio file not found"</string>
    <string name="hold_to_record_guide">"Hold to record, release to finish"</string>
    <string name="url_copied_to_clipboard">"Voizy url copied to clipboard"</string>
    <string name="error_audio_over_15_not_allowed">"Audio length of over 15s is not allowed"</string>
    <string name="info_no_results">"Oops! No results found. \nWhy not add something related to %s yourself."</string>
    <string name="next">"Next"</string>
    <string name="audio_duration">"Duration: "</string>
    <string name="audio_start_pos">"Start position: "</string>
    <string name="hint_insert_url">"Insert video url"</string>
    <string name="downloading_percentage">"Downloading %d"</string>
    <string name="error_downloading_link">"Cannot download content from this link"</string>
    <string name="error_downloading_duration_over_limit">"Unable download content, maximum limit is 15 minutes"</string>
    <string name="agree_on_terms">"Agree on terms shown above"</string>
    <string name="agree_on_terms_by_ticking">"Agree on terms by ticking the checkbox"</string>
    <string name="confirm">"Confirm"</string>
    <string name="trending">"Trending"</string>
    <string name="top">Top</string>
    <string name="sort_new">New</string>
    <string name="add">"Add"</string>
    <string name="file">"File"</string>
    <string name="record">"Record"</string>
    <string name="download">"Download"</string>
    <string name="youtube_hint">Search and choose a video</string>
</resources>
