<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overlay_fragment_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!--    <TextView-->
    <!--        android:id="@+id/tv_recording_time"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textColor="@color/voizy_orange"-->
    <!--        android:textSize="35sp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.25"-->
    <!--        android:text="00:00 / 00:15" />-->

    <TextView
        android:id="@+id/tv_recording_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:text="0.0s" />

    <com.voizy.android.ui.widget.PlaybackButton
        android:id="@+id/btn_voizy_row_playback"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recording_time"
        android:src="@drawable/round_play_arrow_black_48"
        android:tint="@color/voizy_orange" />

    <TextView
        android:id="@+id/text_voizy_save_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/et_voizy_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/error_audio_over_15_not_allowed"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_voizy_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/et_voizy_tags"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="16dp"
        android:inputType="textCapSentences"
        android:ellipsize="start"
        android:gravity="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="22sp"
        android:letterSpacing="0.001"
        android:hint="@string/name_your_voizy" />

    <com.voizy.android.ui.widget.TagEditText
        android:id="@+id/et_voizy_tags"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_voizy"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="start"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="16sp"
        android:hint="@string/enter_tags_hint" />

    <Button
        style="@style/VoizyTheme.BorderButton"
        android:id="@+id/btn_save_voizy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>