<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/VoizyAppBarTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp">

            <ImageView
                android:layout_width="142.5dp"
                android:layout_height="32.5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="11.5dp"
                android:src="@drawable/voizy_logo" />

            <ImageButton
                android:id="@+id/btn_privacy_policy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end"
                android:src="@drawable/info_white"
                android:background="@android:color/transparent" />

        </android.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawablePadding="8dp"
        android:foregroundTintMode="@android:color/white"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:paddingStart="10dp"
        android:hint="Search"
        android:background="@drawable/border_background" />

    <ProgressBar
        android:id="@+id/progress_initial_loader"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="2dp"
        android:indeterminate="true"
        android:progressBackgroundTint="@android:color/transparent"
        android:progressTint="@color/voizy_orange"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_library_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_initial_loader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/voizy_purple"
        android:text="@string/trending" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_voizy_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_library_headline"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <RelativeLayout
        android:id="@+id/layout_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_voizy_list"
        app:layout_constraintStart_toStartOf="@+id/rv_voizy_list"
        app:layout_constraintTop_toBottomOf="@+id/progress_initial_loader"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iv_no_results"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:src="@drawable/no_results" />

        <TextView
            android:id="@+id/tv_no_results_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_no_results"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="5.5sp"
            android:text="@string/info_no_results"
            android:textColor="@color/voizy_orange"
            android:textSize="21sp" />

        <Button
            android:id="@+id/btn_no_results_create"
            style="@style/VoizyTheme.BorderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_no_results_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="5.5sp"
            android:text="@string/add"
            android:textColor="@color/voizy_orange" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_create_voizy"
        style="@style/VoizyFloatingButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/round_add_black_48"
        app:fabCustomSize="@dimen/fab_size_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/fab_src_size_big"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>